Fixed bug - template.yaml did not have a daily trigger for the dispatch lambda.

--- a/template.yaml
+++ b/template.yaml
@@ -277,6 +277,11 @@ Resources:
         'Fn::GetAtt':
           - IAMRoleDispatch
           - Arn
+      Events:
+        DispatchSchedule:
+          Type: Schedule
+          Properties:
+            Schedule: rate(1 days)
 
   PolicySRIMonitorUserS3ReadOnly:
     Type: AWS::IAM::Policy
